@@ -510,22 +510,15 @@ smtp_reply(int smtp_command, struct host_q *hq, struct deliver *d) {
         statsd_counter("deliver.smtp_response", "5xx", 1);
         switch (smtp_command) {
         case SMTP_CONNECT:
-            if (hq->hq_status == SIMTA_HOST_DOWN) {
-                hq->hq_status = SIMTA_HOST_BOUNCE;
-                syslog(LOG_NOTICE,
-                        "Connect.out [%s] %s: Failed: SMTP banner: %s", d->d_ip,
-                        hq->hq_hostname, line);
-            } else {
-                syslog(LOG_WARNING,
-                        "Deliver.SMTP env <%s>: punt Fail CONNECT reply: %s",
-                        d->d_env->e_id, line);
-            }
+            hq->hq_status = SIMTA_HOST_BOUNCE;
+            syslog(LOG_NOTICE, "Connect.out [%s] %s: Failed: SMTP banner: %s",
+                    d->d_ip, hq->hq_hostname, line);
 
             if ((smtp_reply = smtp_consume_banner(&(hq->hq_err_text), d, line,
                          "Bad SMTP CONNECT reply")) == SMTP_OK) {
-                return (SMTP_ERROR);
+                return SMTP_ERROR;
             }
-            return (smtp_reply);
+            return smtp_reply;
 
         case SMTP_HELO:
             syslog(LOG_NOTICE, "Deliver.SMTP env <%s>: Fail HELO reply: %s",
